Add shop equipment upgrades and multipliers

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <script src="src/systems/booking.js" defer></script>
     <script src="src/systems/social.js" defer></script>
     <script src="src/systems/progression.js" defer></script>
+    <script src="src/systems/shop.js" defer></script>
     <script src="src/systems/story.js" defer></script>
     <script src="src/ui/components.js" defer></script>
     <script src="src/ui/router.js" defer></script>
