Add analytics rollups and snapshots

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="src/utils/rng.js" defer></script>
     <script src="src/systems/economy.js" defer></script>
     <script src="src/systems/performers.js" defer></script>
+    <script src="src/systems/analytics.js" defer></script>
     <script src="src/systems/booking.js" defer></script>
     <script src="src/systems/social.js" defer></script>
     <script src="src/systems/progression.js" defer></script>
