Implement expanded automation system

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script src="src/systems/analytics.js" defer></script>
     <script src="src/systems/competition.js" defer></script>
     <script src="src/systems/booking.js" defer></script>
+    <script src="src/systems/automation.js" defer></script>
     <script src="src/systems/social.js" defer></script>
     <script src="src/systems/progression.js" defer></script>
     <script src="src/systems/shop.js" defer></script>
