Add recruitment flow and per-performer caps

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <section id="screen-roster" class="screen" aria-labelledby="screen-roster-title"></section>
         <section id="screen-social" class="screen" aria-labelledby="screen-social-title"></section>
         <section id="screen-gallery" class="screen" aria-labelledby="screen-gallery-title"></section>
+        <section id="screen-slideshow" class="screen" aria-labelledby="screen-slideshow-title"></section>
         <section id="screen-story-log" class="screen" aria-labelledby="screen-story-log-title"></section>
         <section id="screen-shop" class="screen" aria-labelledby="screen-shop-title"></section>
       </main>
@@ -33,6 +34,7 @@
     <script src="src/utils/rng.js" defer></script>
     <script src="src/systems/economy.js" defer></script>
     <script src="src/systems/performers.js" defer></script>
+    <script src="src/systems/recruitment.js" defer></script>
     <script src="src/systems/analytics.js" defer></script>
     <script src="src/systems/competition.js" defer></script>
     <script src="src/systems/booking.js" defer></script>
