Add premium UI micro-interactions

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
       </div>
 
       <div id="modal-root" class="modal-root" aria-live="polite"></div>
+      <div id="toast-container" class="toast-container"></div>
     </div>
 
     <script src="src/config.js" defer></script>
@@ -111,6 +112,7 @@
     <script src="src/systems/shop.js" defer></script>
     <script src="src/systems/story.js" defer></script>
     <script src="src/ui/components.js" defer></script>
+    <script src="src/utils/animations.js" defer></script>
     <script src="src/ui/router.js" defer></script>
     <script src="src/ui/render.js" defer></script>
     <script src="src/ui/events.js" defer></script>
