Add ambient art layer placeholders

--- a/index.html
+++ b/index.html
@@ -71,16 +71,87 @@
         </nav>
 
         <main class="content-area" id="content-area">
-          <section id="screen-hub" class="screen is-active" aria-labelledby="screen-hub-title"></section>
-          <section id="screen-booking" class="screen" aria-labelledby="screen-booking-title"></section>
-          <section id="screen-content" class="screen" aria-labelledby="screen-content-title"></section>
-          <section id="screen-analytics" class="screen" aria-labelledby="screen-analytics-title"></section>
-          <section id="screen-roster" class="screen" aria-labelledby="screen-roster-title"></section>
-          <section id="screen-social" class="screen" aria-labelledby="screen-social-title"></section>
-          <section id="screen-gallery" class="screen" aria-labelledby="screen-gallery-title"></section>
-          <section id="screen-slideshow" class="screen" aria-labelledby="screen-slideshow-title"></section>
-          <section id="screen-story-log" class="screen" aria-labelledby="screen-story-log-title"></section>
-          <section id="screen-shop" class="screen" aria-labelledby="screen-shop-title"></section>
+          <section id="screen-hub" class="screen is-active" aria-labelledby="screen-hub-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-center placeholder-mascot ambient-breathe">
+                <span>ASSISTANT<br>Mascot Zone</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-booking" class="screen" aria-labelledby="screen-booking-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-bottom placeholder-mascot ambient-breathe-static">
+                <span>PRODUCER<br>Mascot Zone</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-content" class="screen" aria-labelledby="screen-content-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-analytics" class="screen" aria-labelledby="screen-analytics-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-center placeholder-mascot ambient-breathe">
+                <span>ASSISTANT<br>(Analyst Mode)</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-roster" class="screen" aria-labelledby="screen-roster-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-social" class="screen" aria-labelledby="screen-social-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-corner-br placeholder-mascot ambient-breathe-static">
+                <span>TALENT SCOUT<br>(Social Mode)</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-gallery" class="screen" aria-labelledby="screen-gallery-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-lower placeholder-mascot ambient-breathe-static">
+                <span>PRODUCER<br>(Curator Mode)</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-slideshow" class="screen" aria-labelledby="screen-slideshow-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-story-log" class="screen" aria-labelledby="screen-story-log-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-lower placeholder-mascot ambient-breathe-static">
+                <span>ASSISTANT<br>(Narrator Mode)</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
+          <section id="screen-shop" class="screen" aria-labelledby="screen-shop-title">
+            <div class="ambient-layers">
+              <div class="ambient-bg placeholder-bg"></div>
+              <div class="ambient-mascot mascot-pos-right-bottom placeholder-mascot ambient-breathe-static">
+                <span>SALESWOMAN<br>Mascot Zone</span>
+              </div>
+            </div>
+            <div class="screen-content"></div>
+          </section>
         </main>
       </div>
 
