Fix persistent ambient mascot rendering

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
       </div>
     </div>
 
+    <!-- Persistent ambient art containers - outside screens -->
+    <div id="ambient-mascot-container" class="ambient-mascot-container"></div>
+
     <script src="src/config.js" defer></script>
     <script src="src/state.js" defer></script>
     <script src="src/save.js" defer></script>
