--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <span class="nav-item__icon">🖼️</span>
             <span class="nav-item__label">Gallery</span>
           </a>
+          <a class="nav-item" data-screen="screen-conquests" data-action="nav-screen">
+            <span class="nav-item__icon">📩</span>
+            <span class="nav-item__label">Conquests</span>
+          </a>
           <a class="nav-item" data-screen="screen-roster" data-action="nav-screen">
             <span class="nav-item__icon">⭐</span>
             <span class="nav-item__label">Roster</span>
@@ -92,6 +96,9 @@
           <section id="screen-gallery" class="screen" aria-labelledby="screen-gallery-title">
             <!-- Content will be rendered by JS -->
           </section>
+          <section id="screen-conquests" class="screen" aria-labelledby="screen-conquests-title">
+            <!-- Content will be rendered by JS -->
+          </section>
           <section id="screen-slideshow" class="screen" aria-labelledby="screen-slideshow-title">
             <!-- Content will be rendered by JS -->
           </section>
@@ -133,6 +140,7 @@
     <script src="src/systems/social.js" defer></script>
     <script src="src/systems/progression.js" defer></script>
     <script src="src/systems/shop.js" defer></script>
+    <script src="src/systems/conquests.js" defer></script>
     <script src="src/systems/story.js" defer></script>
     <script src="src/ui/components.js" defer></script>
     <script src="src/utils/animations.js" defer></script>
